--- a/index.html
+++ b/index.html
@@ -106,6 +106,35 @@
 
     <div class="sticky"></div>
 
+    <div class="main-1">
+        <div class="main-1__wrap">
+            <div class="main-1__block">
+                <h1 class="main-1__title">BloggerMall — платформа для работы с блогерами</h1>
+                <p class="main-1__text">Заказывай рекламу у блогеров быстро, эффективно и безопасно</p>
+                <div class="main-1__links">
+                    <a href="https://www.bloggermall.com.ua/reklamodatelyam/" class="main-1__link main-1__link--rek">Рекламодателям</a>
+                    <a href="https://www.bloggermall.com.ua/blogeram/" class="main-1__link main-1__link--blog">Блогерам</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="main-2">
+        <div class="main-2__img-block main-2__img-block--left">
+            <picture>
+                <source srcset="img/main/novye_krugi_sleva.webp" type="image/webp">
+                <source srcset="img/main/novye_krugi_sleva.png" type="image/png">     
+                <img src="img/main/novye_krugi_sleva.png" class="main-2__img main-2__img--left" alt="" width="480" height="480">
+            </picture>
+        </div>
+        <div class="main-2__img-block main-2__img-block--right">
+            <picture>
+                <source srcset="img/main/2-layers-3.webp" type="image/webp">
+                <source srcset="img/main/2-layers-3png" type="image/png">     
+                <img src="img/main/2-layers-3.png" class="main-2__img main-2__img--right" alt="" width="680" height="689">
+            </picture>
+        </div>
+    </div>
+
     <script src="js/scripts.js"></script>
     <script src="js/sticky.js"></script>
 </body>
