--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:site_name" content="BloggerMall">
     <meta property="og:image" content="/img/2-layers-3.png">
     <meta name="twitter:card" content="summary_large_image">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
     
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -118,22 +119,183 @@
             </div>
         </div>
     </div>
+
     <div class="main-2">
-        <div class="main-2__img-block main-2__img-block--left">
-            <picture>
-                <source srcset="img/main/novye_krugi_sleva.webp" type="image/webp">
-                <source srcset="img/main/novye_krugi_sleva.png" type="image/png">     
-                <img src="img/main/novye_krugi_sleva.png" class="main-2__img main-2__img--left" alt="" width="480" height="480">
-            </picture>
+        <div class="main-2__img-block main-2__img-block--left">  
+            <img src="img/main/novye_krugi_sleva.png" class="main-2__img main-2__img--left" alt="" width="480" height="480">
         </div>
         <div class="main-2__img-block main-2__img-block--right">
-            <picture>
-                <source srcset="img/main/2-layers-3.webp" type="image/webp">
-                <source srcset="img/main/2-layers-3png" type="image/png">     
-                <img src="img/main/2-layers-3.png" class="main-2__img main-2__img--right" alt="" width="680" height="689">
-            </picture>
+            <img src="img/main/2-layers-3.png" class="main-2__img main-2__img--right" alt="" width="680" height="688">
         </div>
     </div>
+
+    <div class="main-3">
+        <div class="main-3__wrap">
+            <h3 class="main-3__title">Какие виды рекламы в Instagram<br>можно заказать на нашей платформе?</h3>
+            <div class="main-3__items">
+                <div class="main-3__item main-3__item--purple">
+                    <h3 class="main-3__text">Пост</h3>
+                    <picture class="main-3__img">
+                        <source srcset="img/main/v-1.jpg" media="(max-width: 1100px)">
+                        <img class="main-3__img" src="img/main/v-1m.jpg" alt="" width="191" height="340">
+                    </picture>
+                </div>
+                <div class="main-3__item main-3__item--yellow">
+                    <h3 class="main-3__text">Stories</h3>
+                    <picture class="main-3__img">
+                        <source srcset="img/main/v-2.jpg" media="(max-width: 1100px)">
+                        <img class="main-3__img" src="img/main/v-2m.jpg" alt="" width="191" height="340">
+                    </picture>
+                </div>
+                <div class="main-3__item main-3__item--green">
+                    <h3 class="main-3__text">Пост+Stories</h3>
+                    <picture class="main-3__img">
+                        <source srcset="img/main/v-3.jpg" media="(max-width: 1100px)">
+                        <img class="main-3__img" src="img/main/v-3m.jpg" alt="" width="191" height="340">
+                    </picture>
+                </div>
+                <div class="main-3__item main-3__item--purple">
+                    <h3 class="main-3__text">Видео пост</h3>
+                    <picture class="main-3__img">
+                        <source srcset="img/main/v-4.jpg" media="(max-width: 1100px)">
+                        <img class="main-3__img" src="img/main/v-4m.jpg" alt="" width="191" height="340">
+                    </picture>
+                </div>
+                <div class="main-3__item main-3__item--yellow">
+                    <h3 class="main-3__text">Спецпроект</h3>
+                    <picture class="main-3__img">
+                        <source srcset="img/main/v-5.jpg" media="(max-width: 1100px)">
+                        <img class="main-3__img" src="img/main/v-5m.jpg" alt="" width="191" height="340">
+                    </picture>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="main-4">
+        <div class="main-4__wrap">
+            <h2 class="main-4__title">Почему рекламодатели выбирают нас?</h2>
+            <div class="main-4__block">
+                <div class="main-4__block-info">
+                    <h3 class="main-4__block-title">Аналитика аккаунтов блогеров</h3>
+                    <div class="main-4__block-for_text">
+                        <p class="main-4__block-text">Instagram-аккаунт блогера можно проанализировать в один клик ещё до начала сотрудничества. Больше не нужно запрашивать скриншоты аналитики у блогеров.</p>
+                        <p class="main-4__block-text">Мы предоставляем динамическую статистику в реальном времени, а именно: количество подписчиков, коэффициент вовлечённости, среднее количество лайков и комментариев, демографические показатели аудитории — пол, возраст, страна, город.</p>
+                    </div>
+                </div>
+                <div class="main-4__block-image">
+                    <img class="main-4__block-img" src="/img/main/why-1m.png" alt="" width="398" height="398">
+                </div>
+            </div>
+            <div class="main-4__block">
+                <div class="main-4__block-image">
+                    <img class="main-4__block-img" src="/img/main/why-2m.png" alt="" width="398" height="398">
+                </div>
+                <div class="main-4__block-info">
+                    <h3 class="main-4__block-title">Безопасная сделка</h3>
+                    <div class="main-4__block-for_text">
+                        <p class="main-4__block-text">Деньги рекламодателя резервируются на платформе. Блогер их получает только после выполнения обязательств. Больше не стоит волноваться о недобросовестности как блогеров, так и рекламодателей.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="main-4__block">
+                <div class="main-4__block-info">
+                    <h3 class="main-4__block-title">Сравнение цен</h3>
+                    <div class="main-4__block-for_text">
+                        <p class="main-4__block-text">Больше не нужно обращаться к каждому блогеру отдельно и ждать несколько дней. Все цены указаны в списке блогеров на платформе.</p>
+                    </div>
+                </div>
+                <div class="main-4__block-image">
+                    <img class="main-4__block-img" src="/img/main/why-3m.png" alt="" width="398" height="398">
+                </div>
+            </div>
+            <div class="main-4__block">
+                <div class="main-4__block-image">
+                    <img class="main-4__block-img" src="/img/main/why-4m.png" alt="" width="398" height="398">
+                </div>
+                <div class="main-4__block-info">
+                    <h3 class="main-4__block-title">Умные фильтры</h3>
+                    <div class="main-4__block-for_text">
+                        <p class="main-4__block-text">Находи блогеров с помощью фильтров по тематикам блога, стоимости рекламы и ряда других показателей. Даже если Вы никогда не слышали про лидеров мнений в своей сфере, наша платформа может их найти.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="main-4__block">
+                <div class="main-4__block-info">
+                    <h3 class="main-4__block-title">Показательная система рейтинга</h3>
+                    <div class="main-4__block-for_text">
+                        <p class="main-4__block-text">Узнайте, насколько эффективным оказалось сотрудничество с блогером у других рекламодателей. Вам помогут реальные отзывы и система ранжирования.</p>
+                    </div>
+                </div>
+                <div class="main-4__block-image">
+                    <img class="main-4__block-img" src="/img/main/why-5m.png" alt="" width="398" height="398">
+                </div>
+            </div>
+            <div class="main-4__block">
+                <div class="main-4__block-image">
+                    <img class="main-4__block-img" src="/img/main/why-6m.png" alt="" width="398" height="398">
+                </div>
+                <div class="main-4__block-info">
+                    <h3 class="main-4__block-title">Географический поиск</h3>
+                    <div class="main-4__block-for_text">
+                        <p class="main-4__block-text">Рекламодатели могу найти блогеров из определённого региона. А так же возможен поиск по географическому расположению аудитории — будь это не большой городок или столица.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="main-4__block">
+                <div class="main-4__block-info">
+                    <h3 class="main-4__block-title">Внутренний чат</h3>
+                    <div class="main-4__block-for_text">
+                        <p class="main-4__block-text">Внутри платформы есть удобный чат для общения с выбранным блогером. Блогеры более активно и оперативно отвечают в нашем чате, так как не отвлекаются на многочисленные запросы стоимости рекламы и статистики.</p>
+                    </div>
+                </div>
+                <div class="main-4__block-image">
+                    <img class="main-4__block-img" src="/img/main/why-7m.png" alt="" width="398" height="398">
+                </div>
+            </div>
+            <div class="main-4__for-link">
+                <a href="/search-bloggers/" class="main-4__link">Найти блогеров</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="main-5">
+        <div class="main-5__wrap">
+            <h2 class="main-5__title">Как работает Безопасная сделка?</h2>
+            <div class="main-5__items">
+                <div class="main-5__item">
+                    <div class="main-5__svg svg-coin"></div>
+                    <p class="main-5__text">После успешной оплаты ваши деньги резервируются на платформе</p>
+                </div>
+                <div class="main-5__item">
+                    <div class="main-5__svg svg-chat"></div>
+                    <p class="main-5__text">После успешной оплаты ваши деньги резервируются на платформе</p>
+                    <p class="main-5__text main-5__text--description">Так же, вы можете увеличить обьем проекта, внеся дополнительную оплату.</p>
+                </div>
+                <div class="main-5__item">
+                    <div class="main-5__svg svg-mark"></div>
+                    <p class="main-5__text">После успешной оплаты ваши деньги резервируются на платформе</p>
+                </div>
+                <div class="main-5__item">
+                    <div class="main-5__svg svg-edit"></div>
+                    <p class="main-5__text">После успешной оплаты ваши деньги резервируются на платформе</p>
+                </div>
+            </div>
+            <div class="main-5__ua-logo">
+                <img class="main-5__ua-logo-img" src="img/logo_uapay.png" alt="" width="76" height="59">
+            </div>
+        </div>
+    </div>
+
+    <div class="main-6">
+        <div class="main-6__wrap">
+            <h2 class="main-6__title">Тарифы</h2>
+            <p class="main-6__text">Регистрация и пользование платформой бесплатное. Мы лишь удерживаем
+            <br>комиссию от успешных сделок между Рекламодателями и Блогерами.</p>
+        </div>
+    </div>
+
 
     <script src="js/scripts.js"></script>
     <script src="js/sticky.js"></script>
