--- a/index.html
+++ b/index.html
@@ -293,6 +293,32 @@
             <h2 class="main-6__title">Тарифы</h2>
             <p class="main-6__text">Регистрация и пользование платформой бесплатное. Мы лишь удерживаем
             <br>комиссию от успешных сделок между Рекламодателями и Блогерами.</p>
+            <div class="main-6__row">
+                <div class="main-6__circle main-6__circle--green">
+                    <div class="main-6__circle-text">
+                        <p class="main-6__text main-6__text--top">Для блогера:</p>
+                        <p class="main-6__text main-6__text--center main-6__text--percent">10%</p>
+                        <p class="main-6__text main-6__text--description">от стоимости услуги</p>
+                        <p class="main-6__text main-6__text--bottom main-6__text--description">Вы получите выплату на карту уже за вычетом комиссии</p>
+                    </div>
+                </div>
+                <div class="main-6__circle main-6__circle--purple">
+                    <div class="main-6__circle-text">
+                        <p class="main-6__text main-6__text--top">Для рекламодателя:</p>
+                        <p class="main-6__text main-6__text--center main-6__text--percent">10%</p>
+                        <p class="main-6__text main-6__text--description">от стоимости услуги</p>
+                        <p class="main-6__text main-6__text--bottom main-6__text--description">На сайте вы видите цену уже с комиссией сервиса</p>
+                    </div>
+                </div>
+            </div>
+            <p class="main-6__text main-6__text--link">* более подробно с порядком оплаты можно ознакомится в <a href="/oferta/"><span>оферте</span></a></p>
+        </div>
+    </div>
+
+
+    <div class="main-7">
+        <div class="main-7__wrap">
+            <h2 class="main-7__title">Схема работы для рекламодателя</h2>
         </div>
     </div>
 
