--- a/reklamodatelyam.html
+++ b/reklamodatelyam.html
@@ -40,7 +40,7 @@
             </div>
             <div class="header__right">
                 <ul class="header__menu">
-                    <li class="header__menu-item">
+                    <li class="header__menu-item active">
                         <a href="/reklamodatelyam/" class="header__menu-link">Для рекламодателей</a>
                     </li>
                     <li class="header__menu-item">
@@ -125,8 +125,49 @@
     </div>
 
     <div class="rek-3">
+        <div class="rek-3__img">
+            <img src="img/reklamodatelyam/group_128.png" alt="" w="230" height="557">
+        </div>
         <div class="rek-3__wrap">
             <h2 class="rek-3__title">Какие возможности открывает платформа?</h2>
+            <div class="rek-3__items">
+                <div class="rek-3__item">
+                    <div class="rek-3__item-block">
+                        <div class="rek-3__item-svg svg-stats"></div>
+                    </div>
+                    <div class="rek-3__item-info">
+                        <h3 class="rek-3__item-title">Анализ и оценка аудитории</h3>
+                        <p class="rek-3__item-text">Платформа предоставляет динамическую аналитику аккаунтов инстаблогеров в реальном времени. Мы предоставляем реальные данные по количеству подписчиков, их геолокации, полу, возрасту, коэффициенту вовлечённости аудитории, а так же количество лайков и комментариев под публикациями. Больше не нужно писать в Директ или на почту и ждать долгого ответа. Договориться о сотрудничестве теперь можно в один клик!</p>
+                    </div>
+                </div>
+                <div class="rek-3__item">
+                    <div class="rek-3__item-block">
+                        <div class="rek-3__item-svg svg-locate_search"></div>
+                    </div>
+                    <div class="rek-3__item-info">
+                        <h3 class="rek-3__item-title">Умный и удобный поиск блогеров</h3>
+                        <p class="rek-3__item-text">С помощью удобных фильтров можно выбрать блогеров с необходимым бюджетом, видом сотрудничества, количеством подписчиков и коэффициенте вовлечённости. Так же платформа позволяет установить фильтры на необходимую целевую аудиторию по интересам, возрасту, полу и геопозиции. Настроив все фильтры, Вы найдёте того самого блогера, который идеально подойдёт для Ваших рекламных целей.</p>
+                    </div>
+                </div>
+                <div class="rek-3__item">
+                    <div class="rek-3__item-block">
+                        <div class="rek-3__item-svg svg-suitcase-clock"></div>
+                    </div>
+                    <div class="rek-3__item-info">
+                        <h3 class="rek-3__item-title">Упрощенное управление рекламными кампаниями</h3>
+                        <p class="rek-3__item-text">Эффективная CRM-система облегчает взаимодействие с блогерами на всех этапах сотрудничества – от переговоров и согласования содержания нативной рекламы до публикации рекламного креатива.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="rek-4">
+        <div class="rek-4__wrap">
+            <h2 class="rek-4__title">Гарантированная безопастность сделок</h2>
+        </div>
+        <div class="rek-4__img">
+            <img src="img/reklamodatelyam/group_128-1.png" alt="" w="220" height="517">
         </div>
     </div>
 
