--- a/reklamodatelyam.html
+++ b/reklamodatelyam.html
@@ -165,9 +165,39 @@
     <div class="rek-4">
         <div class="rek-4__wrap">
             <h2 class="rek-4__title">Гарантированная безопастность сделок</h2>
+            <div class="rek-4__items">
+                <div class="rek-4__item">
+                    <p class="rek-4__item-title">Этап 1</p>
+                    <p class="rek-4__item-text">Рекламодатель подбирает блогеров, договаривается с ними о дальнейшем сотрудничестве создает техническое задание.</p>
+                </div>
+                <div class="rek-4__item">
+                    <p class="rek-4__item-title">Этап 2</p>
+                    <p class="rek-4__item-text">Оплата услуг блогеров производится через платформу: она резервирует и удерживает оговоренную сумму до размещения рекламы исполнителелем.</p>
+                </div>
+                <div class="rek-4__item">
+                    <p class="rek-4__item-title">Этап 3</p>
+                    <p class="rek-4__item-text">Если работа выполнена, блогерам выплачивается гонорар. В противном случае – деньги возвращаются рекламодателю в полном объеме.</p>
+                </div>
+            </div>
+            <div class="rek-4__visa">
+                <img class="rek-4__visa-img" src="img/reklamodatelyam/logo_mc_visa.png" alt="" width="454" height="61">
+            </div>
         </div>
         <div class="rek-4__img">
             <img src="img/reklamodatelyam/group_128-1.png" alt="" w="220" height="517">
+        </div>
+    </div>
+
+    <div class="rek-5">
+        <div class="rek-5__wrap">
+            <div class="rek-5__block">
+                <img class="rek-5__block-img" src="/img/reklamodatelyam/group-154-2.png" alt="" width="496" height="461">
+            </div>
+            <div class="rek-5__info">
+                <h2 class="rek-5__info-title">У тебя свой бизнес? Начни работу с платформой</h2>
+                <p class="rek-5__info-text">Зарегистрируйся и увеличь продажи с помощью эффективных блогеров.</p>
+                <button class="rek-5__info-button">Регистрация</button>
+            </div>
         </div>
     </div>
 
