--- a/good-choice.html
+++ b/good-choice.html
@@ -119,10 +119,118 @@
                 </div>
             </div>
             <div class="good-1__right">
-                <img class="good-1__img" src="img/good-choice/group-133.png" alt="" width="580" height="578">
+                <picture class="good-2__img">
+                    <source srcset="img/good-choice/group-133m.png" media="(max-width: 550px)" width="440" height="439">
+                    <img class="good-1__img" src="img/good-choice/group-133.png" alt="" width="580" height="578">
+                </picture>
             </div>
         </div>
     </div>
+
+    <div class="good-2">
+        <div class="good-2__circle-left">
+            <img src="img/good-choice/group-133-4.png" alt="" width="120" height="381">
+        </div>
+        <div class="good-2__wrap">
+            <h2 class="good-2__title">Тренд или реальный инструмент для раскрутки?</h2>
+            <p class="good-2__description">Блогеров называют инфлюенсерами или лидерами мнений. Ими могут быть как столичные звезды шоу-бизнеса с миллионной аудиторией, так и психолог, тренер, повар, доктор или убежденный веган или любой другой человек с более скромным количеством фолловеров – от сотен до несколько тысяч человек. Главное – есть блогер и лояльные подписчики, которым нравится его контент – будь то коллекция фото с едой или развлекательно-познавательные посты про путешествия.</p>
+            <div class="good-2__items">
+                <div class="good-2__item good-2__item--purple">
+                    <h3 class="good-2__text">Пост</h3>
+                    <picture class="good-2__img">
+                        <source srcset="img/main/v-1.jpg" media="(max-width: 1100px)">
+                        <img class="good-2__img" src="img/main/v-1m.jpg" alt="" width="191" height="340">
+                    </picture>
+                </div>
+                <div class="good-2__item good-2__item--yellow">
+                    <h3 class="good-2__text">Stories</h3>
+                    <picture class="good-2__img">
+                        <source srcset="img/main/v-2.jpg" media="(max-width: 1100px)">
+                        <img class="good-2__img" src="img/main/v-2m.jpg" alt="" width="191" height="340">
+                    </picture>
+                </div>
+                <div class="good-2__item good-2__item--green">
+                    <h3 class="good-2__text">Пост+Stories</h3>
+                    <picture class="good-2__img">
+                        <source srcset="img/main/v-3.jpg" media="(max-width: 1100px)">
+                        <img class="good-2__img" src="img/main/v-3m.jpg" alt="" width="191" height="340">
+                    </picture>
+                </div>
+                <div class="good-2__item good-2__item--purple">
+                    <h3 class="good-2__text">Видео пост</h3>
+                    <picture class="good-2__img">
+                        <source srcset="img/main/v-4.jpg" media="(max-width: 1100px)">
+                        <img class="good-2__img" src="img/main/v-4m.jpg" alt="" width="191" height="340">
+                    </picture>
+                </div>
+                <div class="good-2__item good-2__item--yellow">
+                    <h3 class="good-2__text">Спецпроект</h3>
+                    <picture class="good-2__img">
+                        <source srcset="img/main/v-5.jpg" media="(max-width: 1100px)">
+                        <img class="good-2__img" src="img/main/v-5m.jpg" alt="" width="191" height="340">
+                    </picture>
+                </div>
+            </div>
+        </div>
+        <div class="good-2__circle-right">
+            <img src="img/good-choice/group-133-5.png" alt="" width="170" height="475">
+        </div>
+    </div>
+
+    <div class="good-3">
+        <div class="good-3__wrap">
+            <h2 class="good-3__title">Преимущества рекламы у блоггеров</h2>
+            <p class="good-3__description good-3__text">
+                Блогер ведет блог в социальной сети на определенную темы, на него подписываются, его активно читают, к нему<br>
+                прислушиваются, лайкают и комментируют. Страница становится отличной площадкой<br>
+                для размещения рекламы.
+            </p>
+            <div class="good-3__items">
+                <div class="good-3__item">
+                    <div class="good-3__item-left">
+                        <p class="good-3__item-num">01</p>
+                    </div>
+                    <div class="good-3__item-right">
+                        <p class="good-3__item-text">Определенная тематика</p>
+                    </div>
+                </div>
+                <div class="good-3__item">
+                    <div class="good-3__item-left">
+                        <p class="good-3__item-num">02</p>
+                    </div>
+                    <div class="good-3__item-right">
+                        <p class="good-3__item-text">Лайки и комментарии</p>
+                    </div>
+                </div>
+                <div class="good-3__item">
+                    <div class="good-3__item-left">
+                        <p class="good-3__item-num">03</p>
+                    </div>
+                    <div class="good-3__item-right">
+                        <p class="good-3__item-text">Подписчики и активные читатели</p>
+                    </div>
+                </div>
+                <div class="good-3__item">
+                    <div class="good-3__item-left">
+                        <p class="good-3__item-num">04</p>
+                    </div>
+                    <div class="good-3__item-right">
+                        <p class="good-3__item-text">Готовая рекламная площадка</p>
+                    </div>
+                </div>
+            </div>
+            <p class="good-3__text">
+                Например, beauty-блогер пользуется декоративной косметикой и проверяет ее качество.<br>
+                Соответственно рекламодатель предлагает свою косметическую продукцию для очередного поста, и влиятельный<br>
+                инстаблогер, на которого равняются сотни или тысячи, покажет, расскажет и, возможно, протестирует продукт на себе.<br>
+                Для аудитории его посты – не пустой звук, а реальный отзыв от реального человека, которому они симпатизируют!<br>
+                Блогер = друг, а друг плохого не посоветует.</p>
+        </div>
+        <div class="good-3__img">
+            <img src="img/good-choice/group-156.png" alt="" width="270" height="515">
+        </div>
+    </div>
+
 
     <script src="js/scripts.js"></script>
     <script src="js/sticky.js"></script>
