--- a/good-choice.html
+++ b/good-choice.html
@@ -14,7 +14,7 @@
     <meta property="og:site_name" content="BloggerMall">
     <meta property="og:image" content="img/reklamodatelyam/2-layers-3.png">
     <meta name="twitter:card" content="summary_large_image">
-    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <link rel="icon" type="image/svg" href="favicon.svg" sizes="32x32">
 
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -228,6 +228,77 @@
         </div>
         <div class="good-3__img">
             <img src="img/good-choice/group-156.png" alt="" width="270" height="515">
+        </div>
+    </div>
+
+
+    <div class="good-4">
+        <div class="good-4__wrap">
+            <h2 class="good-4__title">Почему инстаблогеры, а не таргетинг?</h2>
+            <div class="good-4__row">
+                <div class="good-4__left">
+                    <div class="good-4__left-items">
+                        <div class="good-4__left-item">
+                            <div class="good-4__left-item-block">
+                                <div class="good-4__left-item-svg svg-good-1"></div>
+                            </div>
+                            <div class="good-4__left-item-info">
+                                <h3 class="good-4__left-item-title">Широкий Выбор</h3>
+                                <p class="good-4__left-item-text">Разные форматы на любой вкус. Обзоры, фотопосты, видео, сториc.</p>
+                            </div>
+                        </div>
+                        <div class="good-4__left-item">
+                            <div class="good-4__left-item-block">
+                                <div class="good-4__left-item-svg svg-good-2"></div>
+                            </div>
+                            <div class="good-4__left-item-info">
+                                <h3 class="good-4__left-item-title">Доверие</h3>
+                                <p class="good-4__left-item-text">Реклама сделана инфлюенсерами, которым доверяют. Она выглядит, как личная рекомендация, поэтому ей доверяют больше</p>
+                            </div>
+                        </div>
+                        <div class="good-4__left-item">
+                            <div class="good-4__left-item-block">
+                                <div class="good-4__left-item-svg svg-good-3"></div>
+                            </div>
+                            <div class="good-4__left-item-info">
+                                <h3 class="good-4__left-item-title">Общение</h3>
+                                <p class="good-4__left-item-text">Есть прямой контакт с аудиторией.</p>
+                            </div>
+                        </div>
+                        <div class="good-4__left-item">
+                            <div class="good-4__left-item-block">
+                                <div class="good-4__left-item-svg svg-good-4"></div>
+                            </div>
+                            <div class="good-4__left-item-info">
+                                <h3 class="good-4__left-item-title">Скорость</h3>
+                                <p class="good-4__left-item-text">Блогер опубликовал пост, и в течение суток уже есть конкретные результаты – подписчики конвертируются в покупателей и знакомятся с брендом.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="good-4__right">
+                    <div class="good-4__right-items">
+                        <div class="good-4__right-item good-4__right-item--yellow">
+                            <div class="good-4__right-item-head">
+                                <div class="good-4__right-item-svg svg-good-5"></div>
+                                <h3 class="good-4__right-item-title"></h3>
+                            </div>
+                            <div class="good-4__right-item-body">
+                                <p class="good-4__right-item-text">Важно не прогадать с блогером и попасть в яблочко с тематикой. Даже блогер со сравнительно маленькой аудиторией окажется очень полезным, если среди его фолловеров будет 70-80% ваших потенциальных покупателей. Так сказать, максимальная концентрация в одном месте.</p>
+                            </div>
+                        </div>
+                        <div class="good-4__right-item good-4__right-item--gray">
+                            <div class="good-4__right-item-head">
+                                <div class="good-4__right-item-svg svg-good-6"></div>
+                                <h3 class="good-4__right-item-title">Таргетинг</h3>
+                            </div>
+                            <div class="good-4__right-item-body">
+                                <p class="good-4__right-item-text">С таргетингом и контекстной рекламой все иначе. Например, можно написать яркий и креативный рекламный текст, но аудитория останется безучастна. Почему? Наш мозг настолько привык к вездесущей рекламе, что «фильтрует» поступающую информацию и редко реагирует на рекламу, которая внезапно появляется в ленте – она воспринимается как информационный мусор, листовка в метро.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
