--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:site_name" content="BloggerMall">
     <meta property="og:image" content="img/2-layers-3.png">
     <meta name="twitter:card" content="summary_large_image">
-    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <link rel="icon" type="image/svg" href="favicon.svg" sizes="32x32">
     
     <link rel="stylesheet" href="css/style.min.css">
 </head>
