--- a/good-choice.html
+++ b/good-choice.html
@@ -303,6 +303,50 @@
     </div>
 
 
+    <div class="good-5">
+        <div class="good-5__wrap">
+            <div class="good-5__info">
+                <h2 class="good-5__info-title">Реальный пример Instagram-магии</h2>
+                <p class="good-5__info-text">Компании Mediascope и PRT Edelman Affiliate провели исследование на тему интеграции брендов в блогерский контент в России. Выяснилось, что 48% участников опроса уверены, что блогеры рекомендуют исключительно те продукты и услуги, которые нравятся им самим.</p>
+            </div>
+            <div class="good-5__block">
+                <picture>
+                    <source srcset="img/good-choice/group-157m.png" media="(max-width: 767px)" width="480" height="448">
+                    <img class="good-5__block-img" src="img/good-choice/group-157.png" alt="" width="580" height="541">
+                </picture>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="good-6">
+        <div class="good-6__circle-left">
+            <img src="img/good-choice/group-159.png" alt="" width="237" height="575">
+        </div>
+        <div class="good-6__wrap">
+            <h2 class="good-6__title">Кейс</h2>
+            <div class="good-6__row">
+                <div class="good-6__info">
+                    <h3 class="good-6__info-title">Фитнес-резинки Ракамакафит</h3>
+                    <p class="good-6__info-text">В 2017-2018 годах фитнес-резинки Ракамакафит стали настоящим бумом среди фитоняшек и поклонников ЗОЖ. И все благодаря рекламе в Instagram.</p>
+                    <div class="good-6__info-row">
+                        <p class="good-6__info-text good-6__info-text--data">Задача:</p>
+                        <p class="good-6__info-text">В 2017-2018 годах фитнес-резинки Ракамакафит стали настоящим бумом среди фитоняшек и поклонников ЗОЖ. И все благодаря рекламе в Instagram.</p>
+                    </div>
+                    <div class="good-6__info-row">
+                        <p class="good-6__info-text good-6__info-text--data">Результат:</p>
+                        <p class="good-6__info-text">248 040 долларов чистой прибыли</p>
+                    </div>
+
+                </div>
+                <div class="good-6__block">
+                    <img class="good-6__block-img" src="img/good-choice/foto-1.png" alt="" width="482" height="366">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="js/scripts.js"></script>
     <script src="js/sticky.js"></script>
 </body>
