--- a/good-choice.html
+++ b/good-choice.html
@@ -325,7 +325,7 @@
         </div>
         <div class="good-6__wrap">
             <h2 class="good-6__title">Кейс</h2>
-            <div class="good-6__row">
+            <div class="good-6__row good-6__row--line">
                 <div class="good-6__info">
                     <h3 class="good-6__info-title">Фитнес-резинки Ракамакафит</h3>
                     <p class="good-6__info-text">В 2017-2018 годах фитнес-резинки Ракамакафит стали настоящим бумом среди фитоняшек и поклонников ЗОЖ. И все благодаря рекламе в Instagram.</p>
@@ -343,6 +343,37 @@
                     <img class="good-6__block-img" src="img/good-choice/foto-1.png" alt="" width="482" height="366">
                 </div>
             </div>
+            <div class="good-6__row">
+                <div class="good-6__left">
+                    <p class="good-6__left-text good-6__info-text">Производитель заявлял, что их товар – «уникальный компактный спортивный инвентарь, который поможет улучшить и сохранить идеальную фигуру вместо полноценных тренировок в спортзале». Инстаблогеры Ольга Якубенко с аудиторией больше 800 тысяч подписчиков, Татьяна Костовая и Александра Моргачева – с более 500 тысяч фолловеров на каждую рекламировали тренировочные резинки Rakamakafit. На тот момент набор резинок обходился покупателю в 24 доллара. И все бы ничего, но сама основательница бренда уже в 2019 году призналась, что ее «уникальный продукт» почти ничем не отличается от аналогичных фитнес-резинок с Алиэкспресс за 5 долларов. Они даже сделаны на заводе в Китае. Основные отличия – название бренда и яркая цветовая гамма. Тем не менее, в 2018 году чистая прибыль компании Ракамакафит составила 248 тысяч.</p>
+                </div>
+                <div class="good-6__right">
+                    <div class="good-6__right-sticker">
+                        <p class="good-6__right-sticker-text good-6__info-text">«Уникальный компактный спортивный инвентарь, который поможет улучшить и сохранить идеальную фигуру вместо полноценных тренировок в спортзале».</p>
+                        <p class="good-6__right-sticker-title">Производитель</p>
+                        </div>
+                    <p class="good-6__right-text good-6__info-text">Позже покупатели резинок отметили, что и сами не знают, зачем брали эти брендовые раскрученные резинки – они просто были повсюду, мелькали в сторис и постах кумиров. Когда о чем-то говорят почти все лидеры мнений, подписчики начинают запоминать и верить. Аудитория хочет быть похожа на своих кумиров – пользоваться всем тем, чем пользовались их любимые блогеры.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="good-7">
+        <div class="good-7__wrap">
+            <div class="good-7__block">
+                <picture>
+                    <source srcset="img/good-choice/group-158-1m.png" media="(max-width: 640px)" width="459" height="391">
+                    <img src="img/good-choice/group-158-1.png" alt="" class="good-7__block-img" width="580" height="494">
+                </picture>
+            </div>
+            <div class="good-7__info">
+                <h2 class="good-7__info-title">Блогеры создают шумиху, делают продукт «хайповым» и «трендовым»</h2>
+                <p class="good-7__info-text">Товар не только покупают, но и обсуждают! Несмотря на то, что у Rakamakafit давно появились конкуренты, сегодня этот бренд один из самых узнаваемых в своей нише.</p>
+            </div>
+        </div>
+        <div class="good-7__img">
+            <img src="img/good-choice/group-148-1.png" alt="" widht="220" height="352">
         </div>
     </div>
 
