--- a/blogeram.html
+++ b/blogeram.html
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="blog-1__right">
-                <img class="blog-1__img" src="img/blogeram/2-layers.png" alt="" width="480" height="490">
+                <img class="blog-1__img" src="img/blogeram/2-layers.png" alt="" width="480" height="442">
             </div>
         </div>
     </div>
@@ -228,7 +228,7 @@
     <div class="blog-4">
         <div class="blog-4__wrap">
             <div class="blog-4__block">
-                <img class="block-4__block-img" src="img/blogeram/2-layers-6.png" width="442" height="442">
+                <img class="blog-4__block-img" src="img/blogeram/2-layers-6.png" width="442" height="442">
             </div>
             <div class="blog-4__info">
                 <h2 class="blog-4__info-title">Присоединяйся к нам, если:</h2>
