--- a/blogeram.html
+++ b/blogeram.html
@@ -394,6 +394,9 @@
                 <input id="call-phone" type="text" name="password" class="modal__input" placeholder="Ваш телефон">
                 <button type="submit" class="modal__button">Отправить</button>
             </form>
+            <div class="modal__body-start">
+
+            </div>
             <div class="modal__close jsCloseLoginBlock">×</div>
         </div>
     </div>
